css/uxmint-consulting.css
/* ... */
.text-h5-grey-2 {
  font-family: Inter, sans-serif;
  color: #776f3d;
  font-size: 16px;
  line-height: 22px;
}

.div-services-grid {
  margin-top: 0px;
  margin-bottom: 40px;
}

.services-grid-content {
  padding: 30px;
  background-color: #f4f1e7;
}

.section-new-2 {
  display: none;
  height: auto;
  padding-top: 100px;
  padding-bottom: 100px;
  font-family: Inter, sans-serif;
}

.grid-services-4 {
  padding-top: 100px;
  padding-bottom: 140px;
  -ms-grid-columns: 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}

.grid-2-column-2 {
  -ms-grid-rows: auto;
  grid-template-rows: auto;
}
.sectionhero {
  height: 100%;
  background-color: transparent;
}

.wrapper1-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  max-width: 1300px;
  padding: 15% 10% 10% 20%;
  background-color: #fff;
  background-clip: border-box;
}

.div-block-122 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 85px;
  height: 90px;
  margin-top: 10px;
  padding: 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fa4e2e;
}
 
.text-hero {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  -ms-grid-row-align: auto;
  align-self: auto;
  color: #fff;
  font-size: 19px;
  line-height: 26px;
  font-weight: 400;
}

.div-block-123 {
  padding-left: 5%;
}


.section-new-5 {
  height: auto;
  padding-top: 100px;
  padding-bottom: 100px;
  font-family: Inter, sans-serif;
}

.section-new-3 {
  height: auto;
  padding-top: 100px;
  padding-bottom: 100px;
  font-family: Inter, sans-serif;
}

.section-new-3.contact {
  background-color: #000;
}

.wrapper-4 {
  height: 100%;
  max-width: 100%;
  padding-top: 0px;
  padding-right: 100px;
  padding-left: 100px;
  background-color: #000;
}

.tabs-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.tabs-menu-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.con-tab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0px;
  background-color: #000;
  font-size: 22px;
  line-height: 37px;
}

.con-tab.w--current {
  padding-left: 0px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #000;
  color: #fff;
}

.text-block-29 {
  padding-left: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
}

.con-tab1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0px;
  padding-left: 0px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #000;
  color: #666;
  font-size: 22px;
  font-weight: 300;
}

.con-tab1.w--current {
  background-color: #000;
  color: #fff;
  font-size: 22px;
  line-height: 35px;
  font-weight: 500;
}

.text-block-30 {
  padding-left: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
  line-height: 35px;
}

.tab-pane-1-4 {
  margin-left: 0px;
}

.tabs-content-2 {
  margin-left: 50px;
}

.div-block-125 {
  margin-bottom: 40px;
}

.div-block-126 {
  margin-bottom: 40px;
}

.text-22-light {
  color: #ccc;
  font-size: 22px;
  line-height: 36px;
  font-weight: 300;
}

.grid-32 {
  grid-auto-flow: row;
  grid-column-gap: 20px;
  grid-row-gap: 30px;
  -ms-grid-columns: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  -ms-grid-rows: auto auto auto auto auto;
  grid-template-rows: auto auto auto auto auto;
}

.button-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  height: auto;
  margin-left: 0px;
  padding-top: 10px;
  padding-bottom: 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1.5px solid #666;
  border-radius: 50px;
  background-color: #000;
  color: #666;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
  text-align: center;
}

.button-5:hover {
  border-color: #fff;
  color: #fff;
}

.button-5:focus {
  border-color: #fa4e2e;
  color: #fa4e2e;
}

.button-6 {
  width: auto;
  height: 45px;
  padding-top: 10px;
  padding-bottom: 10px;
  border: 1px solid #666;
  border-radius: 90px;
  background-color: #000;
  color: #666;
  font-size: 16px;
  line-height: 25px;
  text-align: center;
}

.button-6:hover {
  border-color: #fff;
  color: #fff;
}

.button-6:focus {
  border-color: #fa4e2e;
  color: #fa4e2e;
}

.grid-contact {
  margin-top: 100px;
  margin-bottom: 40px;
  grid-row-gap: 32px;
}

.form-label {
  font-family: Inter, sans-serif;
  color: #f4f1e7;
  font-weight: 300;
}

.button-3 {
  padding: 15px 25px;
  border-radius: 7px;
  background-color: #fa4e2e;
  color: #fdfdfd;
  font-weight: 600;
  letter-spacing: 2px;
  text-transform: uppercase;
  margin-left: 3px;
}
.tab-link {
  background-color: #000;
  color: #666;
  font-size: 22px;
}

.tab-link.w--current {
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #000;
  color: #fff;
  font-weight: 500;
  text-align: left;
}
/* ... */

